# retail_sales_predictor

./: .gitignore  .replit  app.py  clean_project.md  config.toml  environment.nix  mac_setup.md  project_explanation.ipynb  pyproject.toml  requirements.txt  requirements_mac.txt  requirements_windows.txt  retail_forecaster.db  run_app.bat  run_app.sh  sales_prediction.db  windows_setup.md
.streamlit/: config.toml  secrets.toml
attached_assets/: Pasted--venv-saagarkollidom-Saagars-MacBook-Pro-Main-pip-install-pmdarima-Collecting-pmdarima-Using--1745804355463.txt  Pasted-TypeError-unhashable-type-list-Traceback-File-home-runner-workspace-pythonlibs-lib-python3-1-1745757444229.txt  Pasted-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-users-password-SQL-SEL-1745756807442.txt  Pasted-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-table-users-SQL-SELECT-users--1745756862900.txt  Pasted-ypeError-Categorical-with-dtype-category-does-not-support-reduction-mean-Traceback-File-home-1745758467713.txt  Pasted-ypeError-Encoders-require-their-input-argument-must-be-uniformly-strings-or-numbers-Got-list-T-1745756982174.txt
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
utils/: data_processing.py  database.py  firebase_config.py  firebase_storage.py  model.py  sentiment_analysis.py  visualization.py  weather_api.py
utils/data/: data_generator.py  sample_data_generator.py
